--- a/Housing-SPA/src/app/property/property-list/property-list.component.html
+++ b/Housing-SPA/src/app/property/property-list/property-list.component.html
@@ -13,8 +13,8 @@
             name="City"
             [(ngModel)]="City"
             > 
-            <button style="border: 1px solid grey;" [ngStyle]="{'background-color': SearchCity==='' ? 'white' : 'blue' }"  type="button" (click) = "onSearchClick()" ><i class="fas fa-filter"></i></button>           
-            <button  type="button" (click) = "onRemovehClick()" >Remove Filter</button>
+            <!-- <button style="border: 1px solid grey;" [ngStyle]="{'background-color': SearchCity==='' ? 'white' : 'blue' }"  type="button" (click) = "onSearchClick()" ><i class="fas fa-filter"></i></button>            -->
+            <!-- <button  type="button" (click) = "onRemovehClick()" >Remove Filter</button> -->
         </div>   
 
     </div>
@@ -38,12 +38,11 @@
 </div> 
 
 <div class="row">
-    <div *ngFor="let property of properties |filter:SearchCity:'City' |sort:[SortbyParam,SortDirection]" 
+    <div *ngFor="let property of properties |filter:City:'City' |sort:[SortbyParam,SortDirection]" 
     class="col-lg-4 col-sm-6">    
     <div class="shadow-lg p-3 mb-3 bg-white rounded">
         <app-property-card [property]="property" [sourceControl]="List"></app-property-card>
     </div>
     </div>
 </div>                       
-    
-    
+ 
