--- a/Housing-SPA/src/app/app.component.html
+++ b/Housing-SPA/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<app-sidebar></app-sidebar>
 <div class="container" style="margin-top: 70px;"> 
   <!-- <app-add-property></app-add-property>
   <app-property-list></app-property-list> -->
