modified:   Housing-SPA/package-lock.json 	modified:   Housing-SPA/src/app/app.component.html 	modified:   Housing-SPA/src/app/property/property-list/property-list.component.html 	modified:   Housing-SPA/src/app/sidebar/sidebar.component.css 	modified:   Housing-SPA/src/app/sidebar/sidebar.component.html

--- a/Housing-SPA/src/app/sidebar/sidebar.component.html
+++ b/Housing-SPA/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,12 @@
-<p>sidebar works!</p>
+<!-- Side navigation -->
+<div class="sidenav">
+    <p>Welcome</p>
+    <p>This</p>
+    <p>Stays</p>
+    <p>Static</p>
+  </div>
+  
+  <!-- Page content -->
+  <div class="main">
+    ...
+  </div>
