--- a/Housing-SPA/src/app/app.component.html
+++ b/Housing-SPA/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-navbar></app-navbar>
+
 <app-sidebar></app-sidebar>
-<div class="container" style="margin-top: 70px;"> 
+
+
+<div class="container" style="margin-top: 70px; margin-left: 150px;"> 
   <!-- <app-add-property></app-add-property>
   <app-property-list></app-property-list> -->
   <router-outlet></router-outlet>
